<resources>
    <string name="app_name">EasyBill</string>
    <string name="login">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="logout">Log out</string>
</resources>
